--- a/Styles.css
+++ b/Styles.css
@@ -1,5 +1,5 @@
 h1  
-{color:  "black";
+{color:  black;
 font-family: 'Times New Roman';
  }
 
@@ -9,5 +9,5 @@ body
 p		
 { color: black;
 font-family: "Times New Roman";
-font-size: large }
+font-size: large; }
 
