--- a/Styles.css
+++ b/Styles.css
@@ -1,5 +1,5 @@
 h1  
-{color:  black;
+{color:  navy;
 font-family: 'Times New Roman';
  }
 
@@ -7,7 +7,7 @@ body
 { background-color: darkgrey;}
 
 p		
-{ color: black;
+{ color: navy;
 font-family: "Times New Roman";
 font-size: large; }
 
