--- a/Styles.css
+++ b/Styles.css
@@ -1,5 +1,5 @@
 h1  
-{color:  white;
+{color: rgb(0, 0, 128);
 font-family: 'Times New Roman';
  }
 
@@ -7,7 +7,7 @@ body
 { background-color: darkgrey;}
 
 p		
-{ color: white;
+{ color: rgb(0, 0, 128);
 font-family: "Times New Roman";
 font-size: large; }
 
