--- a/Baseball.css
+++ b/Baseball.css
@@ -3,7 +3,7 @@ header {
     padding: 5px;
     text-align: center;
     font-size: 25px;
-    color: white;
+    color: 	#FFFFFF;
   }
 
   article {
@@ -19,7 +19,7 @@ header {
     background-color: 	#0000FF;
     padding: 10px;
     text-align: ;
-    color: white;
+    color: 	#FFFFFF;
 
  a {
         color: 	#FF0000;
