--- a/Baseball.css
+++ b/Baseball.css
@@ -1,6 +1,6 @@
 header {
     background-color: 	#0000FF;
-    padding: 5px;
+    padding: 5;
     text-align: center;
     font-size: 25px;
     color: 	#FFFFFF;
@@ -8,8 +8,8 @@ header {
 
   article {
     float: center;
-    padding: 20px;
-    width: 70%;
+    padding: 20;
+    width: 70;
     background-color: #f1f1f1;
     height;
   }
@@ -17,7 +17,7 @@ header {
   footer {
     Float: center ;
     background-color: 	#0000FF;
-    padding: 10px;
+    padding: 10;
     text-align: ;
     color: 	#FFFFFF;
 
