--- a/Baseball.css
+++ b/Baseball.css
@@ -2,7 +2,7 @@ header {
     background-color: 	#0000FF;
     padding: 5;
     text-align: center;
-    font-size: 25px;
+    font-size: 25;
     color: 	#FFFFFF;
   }
 
