--- a/Group Project/assets/css/main.css
+++ b/Group Project/assets/css/main.css
@@ -3759,7 +3759,7 @@
 		-ms-transition: -ms-transform 0.5s ease, box-shadow 0.5s ease, visibility 0.5s;
 		transition: transform 0.5s ease, box-shadow 0.5s ease, visibility 0.5s;
 		-webkit-overflow-scrolling: touch;
-		background: #07090c;
+		background: #07090cd3;
 		box-shadow: none;
 		color: #fff;
 		height: 100%;
